# gjallarhorn

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
.github/workflows/: build.yml
client/: CMakeLists.txt
client/include/: IClient.hpp
client/include/client/: Enums.hpp  IClient.hpp
client/src/: main.cpp
client/src/tcp/: BoostTcpClient.cpp  BoostTcpClient.hpp  main.cpp
common/: CMakeLists.txt
common/include/common/protocol/: IMessage.hpp  TextMessage.hpp
common/src/protocol/: TextMessage.cpp
docs/: gjallarhorn.excalidraw
scripts/: build_linux.sh  build_macos.sh
server/: CMakeLists.txt
server/include/: IServer.hpp  ISession.hpp
server/include/server/: IServer.hpp  ISession.hpp
server/src/: main.cpp
server/src/server/: TcpServer.cpp  TcpServer.hpp
server/src/session/: TcpSession.cpp  TcpSession.hpp
server/src/tcp/: BoostTcpServer.cpp  BoostTcpServer.hpp  BoostTcpSession.cpp  BoostTcpSession.hpp  main.cpp
src/: main.cpp
tests/: CMakeLists.txt  test.cpp
